vm/move-prover/tests/sources/regression/performance_200511.exp
Move prover returns: exiting with checking errors
error:

   ┌── tests/sources/regression/performance_200511.move:4:9 ───
   │
 4 │     use 0x1::LCS;
   │         ^^^^^^^^ Invalid 'use'. Unbound module: '0x1::LCS'
   │

error:

    ┌── tests/sources/regression/performance_200511.move:37:28 ───
    │
 37 │         let sender_bytes = LCS::to_bytes(&sender);
    │                            ^^^ Unbound module alias 'LCS'
    │

error:

    ┌── tests/sources/regression/performance_200511.move:38:27 ───
    │
 38 │         let count_bytes = LCS::to_bytes(&counter.counter);
    │                           ^^^ Unbound module alias 'LCS'
    │

error:

    ┌── tests/sources/regression/performance_200511.move:47:35 ───
    │
 47 │         ensures eq_append(result, LCS::serialize(old(counter.counter)), LCS::serialize(sender));
    │                                   ^^^ Unbound module alias 'LCS'
    │

error:

    ┌── tests/sources/regression/performance_200511.move:47:73 ───
    │
 47 │         ensures eq_append(result, LCS::serialize(old(counter.counter)), LCS::serialize(sender));
    │                                                                         ^^^ Unbound module alias 'LCS'
    │

error:

    ┌── tests/sources/regression/performance_200511.move:55:40 ───
    │
 55 │         ensures eq_append(result.guid, LCS::serialize(old(counter.counter)), LCS::serialize(sender));
    │                                        ^^^ Unbound module alias 'LCS'
    │

error:

    ┌── tests/sources/regression/performance_200511.move:55:78 ───
    │
 55 │         ensures eq_append(result.guid, LCS::serialize(old(counter.counter)), LCS::serialize(sender));
    │                                                                              ^^^ Unbound module alias 'LCS'
    │

error:

    ┌── tests/sources/regression/performance_200511.move:62:49 ───
    │
 62 │         Vector::append(&mut authentication_key, LCS::to_bytes(&fresh_address));
    │                                                 ^^^ Unbound module alias 'LCS'
    │

error:

    ┌── tests/sources/regression/performance_200511.move:79:23 ───
    │
 79 │         aborts_if len(LCS::serialize(fresh_address)) + len(auth_key_prefix) != 32;
    │                       ^^^ Unbound module alias 'LCS'
    │

error:

    ┌── tests/sources/regression/performance_200511.move:81:52 ───
    │
 81 │         ensures eq_append(result, auth_key_prefix, LCS::serialize(fresh_address));
    │                                                    ^^^ Unbound module alias 'LCS'
    │

error:

    ┌── tests/sources/regression/performance_200511.move:85:92 ───
    │
 85 │         ensures eq_append(global<T>(Signer::spec_address_of(sender)).received_events.guid, LCS::serialize(2), LCS::serialize(fresh_address));
    │                                                                                            ^^^ Unbound module alias 'LCS'
    │

error:

    ┌── tests/sources/regression/performance_200511.move:85:111 ───
    │
 85 │         ensures eq_append(global<T>(Signer::spec_address_of(sender)).received_events.guid, LCS::serialize(2), LCS::serialize(fresh_address));
    │                                                                                                               ^^^ Unbound module alias 'LCS'
    │

error:

    ┌── tests/sources/regression/performance_200511.move:86:88 ───
    │
 86 │         ensures eq_append(global<T>(Signer::spec_address_of(sender)).sent_events.guid, LCS::serialize(3), LCS::serialize(fresh_address));
    │                                                                                        ^^^ Unbound module alias 'LCS'
    │

error:

    ┌── tests/sources/regression/performance_200511.move:86:107 ───
    │
 86 │         ensures eq_append(global<T>(Signer::spec_address_of(sender)).sent_events.guid, LCS::serialize(3), LCS::serialize(fresh_address));
    │                                                                                                           ^^^ Unbound module alias 'LCS'
    │

error:

    ┌── tests/sources/regression/performance_200511.move:41:9 ───
    │
 41 │         Vector::append(&mut count_bytes, sender_bytes);
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Could not infer this type. Try adding an annotation
    │

error:

    ┌── tests/sources/regression/performance_200511.move:41:9 ───
    │
 41 │         Vector::append(&mut count_bytes, sender_bytes);
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Could not infer this type. Try adding an annotation
    │

error:

    ┌── tests/sources/regression/performance_200511.move:41:9 ───
    │
 41 │         Vector::append(&mut count_bytes, sender_bytes);
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Could not infer this type. Try adding an annotation
    │
